--- a/styles/mono-synth.css
+++ b/styles/mono-synth.css
@@ -98,7 +98,7 @@ html, body {
   flex-direction: row;
   height: 160px;
 }
-.panel.keyboard .key {
+.panel.keyboard .keys .key {
   flex-grow: 2;
   height: 100%;
   background: white;
@@ -106,18 +106,30 @@ html, body {
   border-radius: 0 0 3px 3px;
   cursor: pointer;
 }
-.panel.keyboard .key.down {
+.panel.keyboard .keys .key.down {
   background: #DDDDDD;
 }
-.panel.keyboard .key.black {
-  position: relative;
-  flex-grow: 1;
-  z-index: 2;
-  height: 60%;
-  background: #222222;
-  margin: 0 -0.89%;
+.panel.keyboard .keys.ebony {
+  margin-top: -160px;
+  justify-content: space-between;
+  pointer-events: none;
 }
-.panel.keyboard .key.black.down {
+.panel.keyboard .keys.ebony .spacer {
+  flex-grow: 100;
+}
+.panel.keyboard .keys.ebony .spacer.first {
+  flex-grow: 9;
+}
+.panel.keyboard .keys.ebony .spacer.last {
+  flex-grow: 72;
+}
+.panel.keyboard .keys.ebony .key {
+  pointer-events: all;
+  flex-grow: 100;
+  height: 65%;
+  background: #222222;
+}
+.panel.keyboard .keys.ebony .key.down {
   background: #444444;
 }
 
