--- a/styles/mono-synth.scss
+++ b/styles/mono-synth.scss
@@ -110,33 +110,49 @@ html, body {
      display: flex;
      flex-direction: row;
      height: 160px;
-   }
 
-   .key {
-     flex-grow: 2;
-     height: 100%;
-     background: white;
-     border: 1px solid black;
-     border-radius: 0 0 3px 3px;
-     cursor: pointer;
-
-     &.down {
-       background: #DDDDDD;
-     }
-
-     &.black {
-       position: relative;
-       flex-grow: 1;
-       z-index: 2;
-       height: 60%;
-       background: #222222;
-       margin: 0 -0.89%;
+     .key {
+       flex-grow: 2;
+       height: 100%;
+       background: white;
+       border: 1px solid black;
+       border-radius: 0 0 3px 3px;
+       cursor: pointer;
 
        &.down {
-         background: #444444;
+         background: #DDDDDD;
+       }
+     }
+
+     &.ebony {
+       margin-top: -160px;
+       justify-content: space-between;
+       pointer-events: none;
+
+       .spacer {
+         flex-grow: 100;
+
+         &.first {
+           flex-grow: 9;
+         }
+         &.last {
+           flex-grow: 72;
+         }
+       }
+
+       .key {
+         pointer-events: all;
+         flex-grow: 100;
+         height: 65%;
+         background: #222222;
+
+         &.down {
+           background: #444444;
+         }
        }
      }
    }
+
  }
 }
 
