--- a/styles/mono-synth.css
+++ b/styles/mono-synth.css
@@ -92,6 +92,9 @@ html, body {
   flex-basis: 100%;
   padding: 10px;
 }
+.panel.keyboard .keyboard-keys {
+  margin-top: 20px;
+}
 .panel.keyboard .keys {
   width: 100%;
   display: flex;
@@ -105,6 +108,12 @@ html, body {
   border: 1px solid black;
   border-radius: 0 0 3px 3px;
   cursor: pointer;
+  text-align: left;
+  padding: 2px;
+  color: transparent;
+}
+.panel.keyboard .keys .key.with-label {
+  color: #222222;
 }
 .panel.keyboard .keys .key.down {
   background: #DDDDDD;
