--- a/styles/mono-synth.scss
+++ b/styles/mono-synth.scss
@@ -102,14 +102,18 @@ html, body {
   }
 
   &.keyboard {
-   flex-basis: 100%;
+    flex-basis: 100%;
     padding: 10px;
 
-   .keys {
-     width: 100%;
-     display: flex;
-     flex-direction: row;
-     height: 160px;
+    .keyboard-keys {
+      margin-top: 20px;
+    }
+
+     .keys {
+       width: 100%;
+       display: flex;
+       flex-direction: row;
+       height: 160px;
 
      .key {
        flex-grow: 2;
@@ -118,6 +122,13 @@ html, body {
        border: 1px solid black;
        border-radius: 0 0 3px 3px;
        cursor: pointer;
+       text-align: left;
+       padding: 2px;
+       color: transparent;
+       &.with-label {
+         color: #222222;
+       }
+
 
        &.down {
          background: #DDDDDD;
