--- a/styles/mono-synth.scss
+++ b/styles/mono-synth.scss
@@ -20,6 +20,8 @@ html, body {
 
 .header {
   background: silver;
+  text-align: left;
+  padding: 3px 10px;
 }
 
 .controls {
@@ -32,7 +34,7 @@ html, body {
   flex-basis: content;
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 2px;
   background: silver;
   border: 1px solid gray;
   padding: 0 10px;
@@ -106,7 +108,7 @@ html, body {
     padding: 10px;
 
     .keyboard-keys {
-      margin-top: 20px;
+      margin-top: 10px;
     }
 
      .keys {
