--- a/styles/mono-synth.css
+++ b/styles/mono-synth.css
@@ -124,6 +124,7 @@ html, body {
   height: 160px;
 }
 .panel.keyboard .keys .key {
+  box-sizing: border-box;
   flex-grow: 2;
   height: 100%;
   background: white;
