--- a/styles/mono-synth.scss
+++ b/styles/mono-synth.scss
@@ -142,6 +142,7 @@ html, body {
        height: 160px;
 
      .key {
+       box-sizing: border-box;
        flex-grow: 2;
        height: 100%;
        background: white;
