--- a/polysynth/styles/mono-synth.scss
+++ b/polysynth/styles/mono-synth.scss
@@ -9,6 +9,7 @@ html, body {
 }
 
 * {
+  box-sizing: border-box;
   user-select: none !important;
 }
 
@@ -84,6 +85,7 @@ html, body {
     .presets {
       display: flex;
       flex-direction: column;
+      flex-wrap: wrap;
       background: white;
 
       div {
