--- a/polysynth/styles/mono-synth.scss
+++ b/polysynth/styles/mono-synth.scss
@@ -6,6 +6,7 @@ html, body {
   font: 12px Tahoma, sans-serif;
   background: black;
   overflow: hidden;
+  --spacing: 10px;
 }
 
 * {
@@ -13,8 +14,17 @@ html, body {
   user-select: none !important;
 }
 
+.modal {
+  z-index: 999999;
+}
+
+#synth {
+  height: 100%;
+}
+
 .synth {
   display: flex;
+  height: 100%;
   flex-direction: column;
   justify-items: start;
   background: black;
@@ -106,8 +116,29 @@ html, body {
 
 .controls {
   display: flex;
+  flex-basis: content;
+  flex-grow: 0;
+  flex-shrink: 0;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+
+  .expression-controls {
+    display: flex;
+    flex-grow: 0;
+
+    .panel .control-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+  }
+
+  .settings {
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-wrap: wrap;
+  }
 }
 
 @media (max-height: 690px) {
@@ -126,6 +157,7 @@ html, body {
   border: 1px solid gray;
   padding: 0 10px;
   border-radius: 10px;
+  flex-grow: 1;
 
   h2 {
     text-align: center;
@@ -138,6 +170,7 @@ html, body {
   div.control-group {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
   }
 
   span.control {
@@ -160,22 +193,6 @@ html, body {
       flex-direction: row;
       align-items: center;
       padding: 5px;
-    }
-
-    select {
-      overflow: hidden;
-      text-align: center;
-    }
-
-    input[type="range"] {
-
-      &[orient="vertical"] {
-        appearance: slider-vertical;
-        width: 30px;
-        height: 172px;
-        padding: 0;
-        margin: 0;
-      }
     }
 
     .labels {
@@ -208,18 +225,26 @@ html, body {
   }
 
   &.keyboard {
-    flex-basis: 100%;
+    flex-grow: 1;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
 
+    .keyboard-controls {
+      flex-basis: content;
+      flex-grow: 0;
+    }
     .keyboard-keys {
+      flex-grow: 1;
       margin-top: 10px;
+      position: relative;
     }
 
      .keys {
        width: 100%;
        display: flex;
        flex-direction: row;
-       height: 240px;
+       height: 100%;
 
      .key {
        box-sizing: border-box;
@@ -243,7 +268,11 @@ html, body {
      }
 
      &.ebony {
-       margin-top: -240px;
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 60%;
        justify-content: space-between;
        pointer-events: none;
 
@@ -261,7 +290,6 @@ html, body {
        .key {
          pointer-events: all;
          flex-grow: 100;
-         height: 60%;
          background: #222222;
 
          &.down {
