--- a/polysynth/styles/mono-synth.css
+++ b/polysynth/styles/mono-synth.css
@@ -123,10 +123,14 @@ html, body {
   flex-wrap: wrap;
 }
 
-@media (max-height: 690px) {
-  .controls {
-    flex-wrap: nowrap;
-    overflow-x: auto;
+@media (max-height: 800px) {
+  .expression-controls .panel .control-group {
+    flex-wrap: nowrap !important;
+  }
+
+  .settings {
+    flex-wrap: nowrap !important;
+    overflow-x: auto !important;
   }
 }
 .panel {
