--- a/polysynth/styles/mono-synth.css
+++ b/polysynth/styles/mono-synth.css
@@ -13,6 +13,7 @@ html, body {
 * {
   box-sizing: border-box;
   user-select: none !important;
+  -webkit-user-select: none !important;
 }
 
 .modal {
