--- a/polysynth/styles/mono-synth.css
+++ b/polysynth/styles/mono-synth.css
@@ -63,11 +63,16 @@ html, body {
 }
 
 .library-root {
+  display: none;
   position: absolute;
   background: silver;
   padding: 10px;
   border: 1px solid gray;
   border-radius: 0 10px 10px 10px;
+  font-size: 150%;
+}
+.library-root.show {
+  display: block;
 }
 .library-root .library {
   display: flex;
