--- a/polysynth/styles/mono-synth.scss
+++ b/polysynth/styles/mono-synth.scss
@@ -77,6 +77,7 @@ html, body {
   border: 1px solid gray;
   border-radius: 0 10px 10px 10px;
   font-size: 150%;
+  z-index: 1000;
 
   &.show {
     display: block;
