--- a/polysynth/styles/mono-synth.css
+++ b/polysynth/styles/mono-synth.css
@@ -31,17 +31,25 @@ html, body {
   justify-items: start;
   background: black;
 }
+.synth button {
+  border: 1px solid black;
+  border-radius: 0.5em;
+  padding: 0.2em 1em;
+}
 
 .header {
   background: silver;
   text-align: left;
   padding: 3px 10px;
+  display: flex;
+  gap: 0.5em;
 }
 .header #preset-name {
   display: inline-block;
   border: 1px solid gray;
   width: 200px;
   padding: 3px;
+  font-size: 130%;
 }
 .header #preset-name:empty::before {
   content: "Preset name";
