--- a/hypersynth/styles/synth.css
+++ b/hypersynth/styles/synth.css
@@ -45,6 +45,4 @@ label {
 label span {
   display: inline-block;
   width: 90px;
-}
-
-/*# sourceMappingURL=synth.css.map */
+}/*# sourceMappingURL=synth.css.map */
