--- a/hypersynth/styles/mono-synth.scss
+++ b/hypersynth/styles/mono-synth.scss
@@ -365,5 +365,46 @@ html, body {
  }
 }
 
+.overlay {
+  position: absolute;
+  z-index: 9999;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  flex-basis: content;
+  display: flex;
+  flex-direction: column;
+  margin: 2px;
+  background: black;
+  padding: 6px;
+  border-radius: 16px;
+  flex-grow: 1;
+  box-shadow: 0px 10px 30px;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  .effect-group {
+    display: flex;
+    flex-direction: row;
+    background: silver;
+    border-radius: 10px;
+    margin: 2px;
+    padding: 0 10px;
+    align-items: center;
+
+    .vertical-group:first-child {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      border-right: 1px solid gray;
+      width: 80px;
+      height: 100px;
+    }
+  }
+}
+
 
 
